adding form to connect and an other to create an account

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,65 @@
 body {
   font-family: 'IBM Plex Mono', monospace;
+  background: #5f27cd;
+}
+
+.introduction {
+  color: #F1F1F1;
+}
+
+.introduction h1.logo {
+  font-size: 70px;
+  margin-top: 20px;
+  text-align: center;
+}
+.introduction p.description {
+  font-size: 30px;
+  text-align: center;
+  margin: 10px;
+}
+
+/* LOGIN FORM */
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  max-width: 360px;
+  margin: 50px auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+  text-transform: uppercase;
+  outline: 0;
+  background: #feca57;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+  background: #ff9f43;
+}
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
+}
+.form .message a {
+  color: #feca57;
+  text-decoration: none;
 }
